@@ -22,6 +22,7 @@ Other features
  * Specify minimum Python version in setup.py (Vince Salvino)
  * Extend treebeard's ``fix_tree`` method with the ability to non-destructively fix path issues and add a --full option to apply path fixes (Matt Westcott)
  * Add support for hierarchical/nested Collections (Robert Rollins)
+ * Show user's full name in report views (Matt Westcott)
 
 
 Bug fixes
