@@ -18,7 +18,7 @@
             </div>
             <div class="col9">
                 <h1>{% block branding_welcome %}{% blocktrans %}Welcome to the {{ site_name }} Wagtail CMS{% endblocktrans %}{% endblock %}</h1>
-                <div class="user-name">{{ user.get_full_name|default:user.get_username }}</div>
+                <div class="user-name">{{ user|user_display_name }}</div>
             </div>
         </div>
     </header>
