@@ -63,7 +63,7 @@
                         <td valign="top">
                             <div class="human-readable-date" title="{{ revision.created_at|date:"d M Y H:i" }}">{% blocktrans with time_period=revision.created_at|timesince_simple %}{{ time_period }}{% endblocktrans %} </div>
                             {% if revision.user %}
-                                by {{ revision.user.get_full_name|default:revision.user.get_username }}
+                                by {{ revision.user|user_display_name }}
                             {% endif %}
                         </td>
                     </tr>
