@@ -64,7 +64,7 @@
                                 </span>
                             {% endfor %}
                         </td>
-                        <td>{{ workflow_state.requested_by.get_full_name|default:workflow_state.requested_by.get_username }}</td>
+                        <td>{{ workflow_state.requested_by|user_display_name }}</td>
                         <td>{{ workflow_state.created_at }}</td>
                     </tr>
                 {% endfor %}
