@@ -24,7 +24,7 @@
     {% with latest_revision=page.get_latest_revision %}
         {% if latest_revision %}
             {% if latest_revision.user %}
-                <span class="avatar small" data-wagtail-tooltip="{{ latest_revision.user.get_full_name|default:latest_revision.user.get_username }}"><img src="{% avatar_url latest_revision.user size=25 %}" alt="" /></span>
+                <span class="avatar small" data-wagtail-tooltip="{{ latest_revision.user|user_display_name }}"><img src="{% avatar_url latest_revision.user size=25 %}" alt="" /></span>
             {% endif %}
             {% if latest_revision == page.live_revision %}
                 {% trans "Published" %}
