@@ -9,7 +9,7 @@
             Submitted to <em>{{ workflow_name }}</em> at {{ started_at }}
         {% endblocktrans %}
         {% if workflow_state.requested_by %}
-            {% blocktrans with modified_by=workflow_state.requested_by.get_full_name|default:workflow_state.requested_by.get_username %}by {{ modified_by }}{% endblocktrans %}
+            {% blocktrans with modified_by=workflow_state.requested_by|user_display_name %}by {{ modified_by }}{% endblocktrans %}
             <span class="avatar small"><img src="{% avatar_url page.get_latest_revision.user size=25 %}" alt="" /></span>
         {% endif %}
         </p>
@@ -24,7 +24,7 @@
                 {% icon name="warning" class_name="default" %}<strong>{{ task.name }}</strong>
 
                 {% if task.task_state.finished_by %}
-                    {% blocktrans trimmed with requested_by=task.task_state.finished_by.get_full_name|default:task.task_state.finished_by.get_username %}
+                    {% blocktrans trimmed with requested_by=task.task_state.finished_by|user_display_name %}
                         Changes requested by {{ requested_by }}
                     {% endblocktrans %}
                 {% else %}
@@ -33,7 +33,7 @@
             {% else %}
                 {% icon name="success" class_name="default" %}{{ task.name }}
                 {% if task.task_state.finished_by %}
-                    {% blocktrans trimmed with approved_by=task.task_state.finished_by.get_full_name|default:task.task_state.finished_by.get_username %}
+                    {% blocktrans trimmed with approved_by=task.task_state.finished_by|user_display_name %}
                         Approved by {{ approved_by }}
                     {% endblocktrans %}
                 {% endif %}
